--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
         ddl-auto: none
     open-in-view: false
   flyway:
+    schemas: project
+    default-schema: project
     enabled: true
     baseline-on-migrate: true
     validate-on-migrate: false
